<resources>
    <string name="app_name">Note</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="log_in_label">Log in</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="sign_up_with_email_label">Sign up</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="hello_welcome">Hello,\nWelcome</string>
    <string name="create_account">Create\nan account</string>
    <string name="title">Title</string>
    <string name="start_writing">Start writing...</string>
    <string name="shared_elements_item_text">shared_elements_item_text_%d</string>
</resources>