<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="?colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_bottom"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:background="@drawable/login_top_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input"
                style="@style/Widget.Note.TextInputLayout"
                android:hint="@string/email_label"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@+id/password_text_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_bottom"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.Note.TextInputLayout"
                android:layout_marginTop="16dp"
                android:hint="@string/password_label"
                app:counterEnabled="true"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:helperText="Enter at least 10 characters password"
                app:helperTextEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                style="@style/Widget.Note.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/log_in_label"
                app:layout_constraintBottom_toTopOf="@id/google_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text_input" />

            <Button
                android:id="@+id/signup_button"
                style="@style/Widget.Note.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_up_with_email_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or_textview" />

            <TextView
                android:id="@+id/heading"
                style="@style/TextAppearance.LoginPageHeading.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_welcome"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/underline_left"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/or_textview"
                app:layout_constraintEnd_toStartOf="@+id/or_textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/or_textview"
                app:layout_constraintVertical_bias="0.56" />

            <TextView
                android:id="@+id/or_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="or"
                android:textAppearance="?android:textAppearanceMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/google_sign_in" />

            <View
                android:id="@+id/underline_right"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/or_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/or_textview"
                app:layout_constraintTop_toTopOf="@+id/or_textview"
                app:layout_constraintVertical_bias="0.56" />

            <com.google.android.gms.common.SignInButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_button"
                android:layout_marginTop="16dp"
                android:id="@+id/google_sign_in"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>